<resources>
    <string name="a">Navigate home</string>
    <string name="v4">创建新联系人</string>
    <string name="aid_group">aid_group</string>
    <string name="d">Navigate up</string>
    <string name="e">More options</string>
    <string name="f">Done</string>
    <string name="g">See all</string>
    <string name="h">Choose an app</string>
    <string name="i">OFF</string>
    <string name="j">ON</string>
    <string name="k">Search…</string>
    <string name="l">Clear query</string>
    <string name="m">Search query</string>
    <string name="n">Search</string>
    <string name="o">Submit query</string>
    <string name="p">Voice search</string>
    <string name="q">Share with</string>
    <string name="r">Share with %s</string>
    <string name="s">Collapse</string>
    <string name="t">Search</string>
    <string name="u">999+</string>
    <string name="v">QQ钱包支付失败，请重试或选择其它支付方式</string>
    <string name="w">全部</string>
    <string name="x">搜索 %s 店铺</string>
    <string name="y">全部分类</string>
    <string name="z">配送方</string>
    <string name="a0">京东配送</string>
    <string name="a1">第三方配送</string>
    <string name="a2">价格</string>
    <string name="a3">配送至</string>
    <string name="a4">您的手机暂不支持语音搜索功能，点击确定下载安装最新的Google语音搜索软件，您也可以在各应用商店搜索“语音搜索”进行下载安装。</string>
    <string name="a5">您是不是要找：</string>
    <string name="a6">语音识别</string>
    <string name="always_finish_activities">由于您已开启\"不保留活动\"，导致京东部分功能无法正常使用。我们建议您点击左下方\"设置\"按钮，在\"开发者选项\"中关闭\"不保留活动\"功能。</string>
    <string name="app_error_close">关闭</string>
    <string name="app_error_msg">应用出错 ,即将关闭。</string>
    <string name="app_error_submit">提交</string>
    <string name="app_error_tag_des">希望您将手机号和出错情况告诉我们，帮助我们优化，谢谢。</string>
    <string name="app_error_title">对不起，应用错误即将关闭</string>
    <string name="article_not_find">内容走丢了，看看其他内容吧</string>
    <string name="article_off_line">此资讯内容已不存在</string>
    <string name="b">非法应用，请从官网重新下载客户端</string>
    <string name="c">存储空间不足，部分功能可能无法正常使用，请释放足够的空间</string>
    <string name="we">跳过</string>
    <string name="wf">网络请求失败</string>
    <string name="ai">请选择</string>
    <string name="aj">选择其它地址</string>
    <string name="ak">配送至</string>
    <string name="al">京东地址库升级，请重新选择</string>
    <string name="am">取消</string>
    <string name="an">确定</string>
    <string name="ao">京东</string>
    <string name="ap">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aq">插件加载失败，请重启或清除数据后再试</string>
    <string name="ar">返回京东</string>
    <string name="as">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="at">待收货</string>
    <string name="au">全部订单</string>
    <string name="av">已取消</string>
    <string name="aw">已完成</string>
    <string name="ax">待评价</string>
    <string name="ay">待付款</string>
    <string name="az">启动照相机失败，请检查设备并开放权限</string>
    <string name="b0">取消</string>
    <string name="b1">确定</string>
    <string name="b2">确定清除本地缓存？</string>
    <string name="b3">请选择照片</string>
    <string name="b4">您的手机没有安装SD卡，请安装SD卡后重试！</string>
    <string name="b5">打开相机失败</string>
    <string name="b6">取消</string>
    <string name="b7">操作失败</string>
    <string name="b8">操作成功</string>
    <string name="b9">货到付款</string>
    <string name="b_">Copy\n</string>
    <string name="ba">Debug JS Remotely</string>
    <string name="bb">Stop Remote JS Debugging</string>
    <string name="bc">Dismiss\n(ESC)</string>
    <string name="bd">Toggle Inspector</string>
    <string name="be">Capture Heap</string>
    <string name="bf">Enable Hot Reloading</string>
    <string name="bg">Disable Hot Reloading</string>
    <string name="bh">Unable to download JS bundle. Did you forget to start the development server or connect your device?</string>
    <string name="wg">请检查您的网络</string>
    <string name="channel_footer_enddata">没有更多数据啦！</string>
    <string name="bi">Enable Live Reload</string>
    <string name="bj">Disable Live Reload</string>
    <string name="bk">Loading from %1$s…</string>
    <string name="bl">Show Perf Monitor</string>
    <string name="bm">Hide Perf Monitor</string>
    <string name="bn">Start/Stop Sampling Profiler</string>
    <string name="bo">Reload\n(R, R)</string>
    <string name="bp">Reload</string>
    <string name="bq">Unable to connect with remote debugger</string>
    <string name="br">Connecting to remote debugger</string>
    <string name="bs">Report</string>
    <string name="bt">Dev Settings</string>
    <string name="bu">Catalyst Dev Settings</string>
    <string name="bv">%1$d / %2$d</string>
    <string name="bw">支付密码错误次数太多，请稍后再试</string>
    <string name="bx">请输入正确的手机号码</string>
    <string name="by">此面额缺货</string>
    <string name="bz">用户虚拟资产不足</string>
    <string name="c0">未登录</string>
    <string name="c1">方法不存在</string>
    <string name="c2">号段信息不存在</string>
    <string name="c3">每单限用1张优惠券哦</string>
    <string name="c4">下单失败</string>
    <string name="c5">订单信息不存在</string>
    <string name="c6">参数不能为空</string>
    <string name="c7">参数不正确</string>
    <string name="c8">先开通支付密码哦</string>
    <string name="c9">商品信息不存在</string>
    <string name="c_">产品与手机号不匹配</string>
    <string name="ca">支付密码不正确，再试一下</string>
    <string name="cb">双方售价不符</string>
    <string name="cc">系统异常</string>
    <string name="cd">系统错误，请重试</string>
    <string name="ce">业务即将开放，请等待</string>
    <string name="cf">启动照相机失败，请检查设备并开放权限</string>
    <string name="cg">抱歉，您尚未安装QQ</string>
    <string name="ch">抱歉，您尚未安装微信</string>
    <string name="ci">请升级到QQ最新版本使用</string>
    <string name="cj">请升级到微信最新版本使用</string>
    <string name="ck">选择文件</string>
    <string name="cl">网络异常，点击重新加载</string>
    <string name="cm">条评价</string>
    <string name="cn">请选择</string>
    <string name="co">确定</string>
    <string name="cp">创建目录失败！</string>
    <string name="cq">请选择照片</string>
    <string name="cr">您的手机没有安装SD卡，请安装SD卡后重试！</string>
    <string name="cs">打开相机失败</string>
    <string name="ct">没有照片或者内容不符，请确认</string>
    <string name="cu">拍照</string>
    <string name="cv">手机相册</string>
    <string name="cw">操作失败</string>
    <string name="cx">个人信息</string>
    <string name="cy">拍照上传</string>
    <string name="cz">本地上传</string>
    <string name="d0">修改头像</string>
    <string name="d1">启动照相机失败，请检查设备并开放权限</string>
    <string name="d2">用户头像上传失败!</string>
    <string name="d3">上传失败</string>
    <string name="d4">上传成功</string>
    <string name="d5">返回</string>
    <string name="d6">关闭页面</string>
    <string name="d7">分享</string>
    <string name="d8">提示</string>
    <string name="d9">不开发票</string>
    <string name="d_">已经领过啦</string>
    <string name="da">已领取</string>
    <string name="channel_footer_nodata">暂无数据哦</string>
    <string name="db">可换豆</string>
    <string name="dc">可赠送</string>
    <string name="dd">点击领取</string>
    <string name="de">点击使用</string>
    <string name="df">首页</string>
    <string name="dg">东券</string>
    <string name="dh">有效期</string>
    <string name="di">请输入验证码</string>
    <string name="dj">京券</string>
    <string name="dk">满%1$s元可用</string>
    <string name="dl">领取优惠券</string>
    <string name="dm">领取失败</string>
    <string name="dn">验证失败</string>
    <string name="do">领光啦</string>
    <string name="dp">领取成功</string>
    <string name="dq">以下商品可使用满%1$s减%2$s的优惠券</string>
    <string name="dr">上传失败</string>
    <string name="ds">未发现异常信息，无需上报</string>
    <string name="dt">上传成功</string>
    <string name="du">网络连接错误，请查看您的网络</string>
    <string name="dv">视频加载失败，请稍后重试</string>
    <string name="dw">当前处于移动网络下，将会消耗移动网络流量</string>
    <string name="dx">刷新</string>
    <string name="dy">重播</string>
    <string name="dz">送货时间</string>
    <string name="e0">确认离开</string>
    <string name="e1">确认离开</string>
    <string name="e2">更换支付方式</string>
    <string name="e3">确定</string>
    <string name="e4">继续支付</string>
    <string name="e5">确认要放弃本次支付吗？</string>
    <string name="e6">确认要离开收银台？</string>
    <string name="e7">暂时还没有评论，快来抢沙发！</string>
    <string name="e8">东券</string>
    <string name="e9">下载失败</string>
    <string name="e_">下载成功</string>
    <string name="ea">下载中...</string>
    <string name="eb">删除地址</string>
    <string name="ec">是否删除该地址</string>
    <string name="ed">新建收货地址</string>
    <string name="ee">编辑收货地址</string>
    <string name="ef">另存新增地址</string>
    <string name="eg">进入收银台失败，请重试</string>
    <string name="eh">暂时无法打开此页面，请稍后重试</string>
    <string name="ei">切换</string>
    <string name="ej">读取数据失败</string>
    <string name="ek">该分类下暂无%s哦</string>
    <string name="el">店铺</string>
    <string name="em">明亮</string>
    <string name="en">胶片</string>
    <string name="eo">冷色</string>
    <string name="ep">鲜艳</string>
    <string name="eq">原图</string>
    <string name="er">一键美化</string>
    <string name="es">美颜</string>
    <string name="et">暖色</string>
    <string name="af1">如果退出，您将可能失去本次兑换资格，请问是否确认退出？</string>
    <string name="af2">取消</string>
    <string name="af3">确定</string>
    <string name="ev">订单中心</string>
    <string name="ew">请选择一个赠品:</string>
    <string name="ex">领取</string>
    <string name="ey">请选择</string>
    <string name="ez">赠品更改失败</string>
    <string name="f0">赠品更改成功</string>
    <string name="f1">搭配赠品</string>
    <string name="f2">好评率</string>
    <string name="f3">京东</string>
    <string name="f4">拍照</string>
    <string name="f5">手机相册</string>
    <string name="f6">长按获取图片</string>
    <string name="f7">暂无图片</string>
    <string name="f8">新版本下载完成，赶快安装试试吧！</string>
    <string name="f9">京东收银台</string>
    <string name="f_">直播中</string>
    <string name="fa">预告</string>
    <string name="fb">回放</string>
    <string name="fc">京东支付失败，请重试或选择其它支付方式</string>
    <string name="fd">重新加载</string>
    <string name="fe">这位客官，网络不给力啊。</string>
    <string name="ff">请检查一下您的网络，重新加载吧！</string>
    <string name="fg">检查下网络再来吧</string>
    <string name="fh">网络请求失败</string>
    <string name="fi">重新加载</string>
    <string name="fj">无通讯录访问权限</string>
    <string name="fk">取消录制</string>
    <string name="fl">录制失败</string>
    <string name="fm">不能创建文件</string>
    <string name="fn">继续录制</string>
    <string name="fo">空间已满，请释放空间后再尝试</string>
    <string name="fp">你的手机空间快满了，录制视频会有风险哦!</string>
    <string name="fq">存储空间快满啦</string>
    <string name="fr">录制时间过短</string>
    <string name="fs">长按下方按钮录制视频</string>
    <string name="ft">你未开启WiFi，上传视频会产生流量费用，是否继续</string>
    <string name="fu">WiFi已关闭</string>
    <string name="fv">系统正忙，请稍后再试</string>
    <string name="h5">载入失败 点击重试</string>
    <string name="h6">@string/k1</string>
    <string name="h7">已加载全部数据</string>
    <string name="lb">获取语音验证码</string>
    <string name="lc">请输入语音验证码</string>
    <string name="lj">安全验证</string>
    <string name="lk">去发送</string>
    <string name="lm">您的操作存在安全风险，需要进行验证</string>
    <string name="ln">如果没有收到电话，请在倒计时结束后点击“重新获取”</string>
    <string name="lr">点击“获取语音验证码”，来自%1$s的电话将拨打至您绑定的手机号：</string>
    <string name="ls">%1$s</string>
    <string name="lt">请先使用您绑定的手机号%1$s发送以下短信，然后点击“查看验证状态”：</string>
    <string name="lu">短信内容</string>
    <string name="lv">RVC873839</string>
    <string name="lw">发送至</string>
    <string name="lx">10698976411</string>
    <string name="ly">发送短信所产生的费用将由运营商收取，京东不收取任何费用。</string>
    <string name="vs">返回按钮</string>
    <string name="a24">关闭按钮</string>
    <string name="a27">清空按钮</string>
    <string name="ai5">信用试协议</string>
    <string name="aj0">分次付款</string>
    <string name="alk">使用说明</string>
    <string name="all">建议本次付款金额</string>
    <string name="aps">取消选择分次付款按钮</string>
    <string name="apt">确定选择分次付款按钮</string>
    <string name="apu">查看使用说明按钮</string>
    <string name="apv">订单金额</string>
    <string name="apw">金额</string>
    <string name="apx">剩余付款</string>
    <string name="ufo_page_text1">我们失去了页面</string>
    <string name="ufo_page_text2">但不希望失去你</string>
    <string name="ufo_page_text_error2">建议清理手机无用数据，并重启京东</string>
    <string name="ufo_page_text_mars">页面在火星</string>
    <string name="ufo_page_text_reload">重新加载</string>
</resources>