<?xml version="1.0" encoding="utf-8"?>
<com.jingdong.common.rvc.view.RvcLayerStyle2 xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/a8e" android:background="@color/lx" android:clickable="true" android:layout_width="match_parent" android:layout_height="450dp">
    <RelativeLayout android:id="@+id/a8f" android:padding="@dimen/jc" android:clickable="true" android:layout_width="match_parent" android:layout_height="@dimen/jm">
        <TextView android:textSize="@dimen/jg" android:textColor="@color/lf" android:gravity="center" android:id="@+id/a8g" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lj" android:layout_centerInParent="true"/>
        <com.facebook.drawee.view.SimpleDraweeView android:id="@+id/a8h" android:duplicateParentState="true" android:layout_width="40dp" android:layout_height="40dp" android:src="@drawable/a4d" android:scaleType="center" android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View android:id="@+id/a8i" android:background="@drawable/j8" android:layout_width="match_parent" android:layout_height="1px" android:layout_below="@+id/a8f"/>
    <ScrollView android:id="@+id/a8j" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/a8i">
        <LinearLayout android:orientation="vertical" android:id="@+id/a86" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="@dimen/jg" android:textColor="@color/e0" android:id="@+id/a8k" android:paddingLeft="@dimen/je" android:paddingTop="@dimen/jd" android:paddingRight="@dimen/je" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lm"/>
            <TextView android:textSize="@dimen/jg" android:textColor="@color/e0" android:id="@+id/a8l" android:paddingLeft="@dimen/je" android:paddingTop="@dimen/jd" android:paddingRight="@dimen/je" android:paddingBottom="@dimen/jd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lt" android:lineSpacingExtra="@dimen/jf"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/a8m" android:background="@color/i0" android:layout_width="match_parent" android:layout_height="@dimen/j6">
                <RelativeLayout android:layout_gravity="center" android:paddingLeft="@dimen/je" android:paddingRight="@dimen/je" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/j9">
                    <TextView android:textSize="@dimen/jg" android:textColor="@color/dk" android:gravity="center_vertical" android:id="@+id/a8n" android:layout_width="@dimen/j7" android:layout_height="wrap_content" android:text="@string/lu" android:layout_alignParentLeft="true"/>
                    <TextView android:textSize="@dimen/jg" android:textColor="@color/dk" android:gravity="center_vertical" android:id="@+id/a8o" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lv" android:lines="1" android:layout_toRightOf="@+id/a8n" android:layout_centerHorizontal="true"/>
                </RelativeLayout>
                <RelativeLayout android:layout_gravity="center" android:paddingLeft="@dimen/je" android:paddingRight="@dimen/je" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/j9">
                    <TextView android:textColor="@color/a" android:gravity="center_vertical" android:id="@+id/a8p" android:paddingLeft="10dp" android:paddingTop="@dimen/j9" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/lk" android:layout_alignParentRight="true"/>
                    <TextView android:textSize="@dimen/jg" android:textColor="@color/dk" android:gravity="center_vertical" android:id="@+id/a8q" android:paddingTop="@dimen/j9" android:layout_width="@dimen/j7" android:layout_height="wrap_content" android:text="@string/lw" android:layout_alignParentLeft="true"/>
                    <TextView android:textSize="@dimen/jg" android:textColor="@color/dk" android:gravity="center_vertical" android:id="@+id/a8r" android:paddingTop="@dimen/j9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lx" android:lines="1" android:layout_toLeftOf="@+id/a8p" android:layout_toRightOf="@+id/a8q" android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </LinearLayout>
            <TextView android:textSize="@dimen/ji" android:textColor="@color/f7" android:paddingLeft="@dimen/je" android:paddingTop="@dimen/je" android:paddingRight="@dimen/je" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ly"/>
        </LinearLayout>
    </ScrollView>
    <FrameLayout android:gravity="center" android:id="@+id/a8s" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.jingdong.common.ui.JDProgressBar android:gravity="center" android:layout_gravity="center" android:layout_width="34dp" android:layout_height="34dp"/>
    </FrameLayout>
</com.jingdong.common.rvc.view.RvcLayerStyle2>
