<?xml version="1.0" encoding="utf-8"?>
<com.jingdong.common.rvc.view.RvcLayerStyle1 xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/a80" android:background="@color/lx" android:clickable="true" android:layout_width="match_parent" android:layout_height="450dp">
    <RelativeLayout android:id="@+id/a81" android:padding="@dimen/jc" android:clickable="true" android:layout_width="match_parent" android:layout_height="@dimen/jm">
        <TextView android:textSize="@dimen/jg" android:textColor="@color/lf" android:gravity="center" android:id="@+id/a82" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lj" android:layout_centerInParent="true"/>
        <com.facebook.drawee.view.SimpleDraweeView android:id="@+id/a83" android:duplicateParentState="true" android:layout_width="40dp" android:layout_height="40dp" android:src="@drawable/a4d" android:scaleType="center" android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View android:id="@+id/a84" android:background="@drawable/j8" android:layout_width="match_parent" android:layout_height="1px" android:layout_below="@+id/a81"/>
    <ScrollView android:id="@+id/a85" android:paddingLeft="@dimen/je" android:paddingRight="@dimen/je" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/a84">
        <LinearLayout android:orientation="vertical" android:id="@+id/a86" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="@dimen/jg" android:textColor="@color/e0" android:id="@+id/a87" android:paddingTop="@dimen/jd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lm"/>
            <TextView android:textSize="@dimen/jg" android:textColor="@color/e0" android:id="@+id/a88" android:paddingTop="@dimen/jd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lr" android:lineSpacingExtra="@dimen/jf"/>
            <TextView android:textSize="@dimen/jh" android:textColor="@color/e0" android:id="@+id/a89" android:paddingTop="@dimen/jd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ls"/>
            <RelativeLayout android:paddingTop="@dimen/jd" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:enabled="true" android:textSize="@dimen/jg" android:textColor="@color/a" android:gravity="center" android:id="@+id/a8_" android:background="@drawable/bq" android:layout_width="@dimen/jb" android:layout_height="@dimen/ja" android:text="@string/lb" android:layout_alignParentRight="true"/>
                <EditText android:textSize="@dimen/jg" android:textColor="@color/dk" android:textColorHint="@color/fu" android:gravity="center_vertical" android:id="@+id/a8a" android:background="@drawable/fi" android:paddingLeft="@dimen/jc" android:layout_width="match_parent" android:layout_height="@dimen/ja" android:layout_marginRight="@dimen/jc" android:hint="@string/lc" android:layout_toLeftOf="@+id/a8_" android:inputType="number"/>
            </RelativeLayout>
            <TextView android:textSize="@dimen/ji" android:textColor="@color/f7" android:id="@+id/a8b" android:paddingTop="@dimen/je" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ln"/>
        </LinearLayout>
    </ScrollView>
    <FrameLayout android:gravity="center" android:id="@+id/a8c" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.jingdong.common.ui.JDProgressBar android:gravity="center" android:layout_gravity="center" android:id="@+id/a8d" android:layout_width="34dp" android:layout_height="34dp"/>
    </FrameLayout>
</com.jingdong.common.rvc.view.RvcLayerStyle1>
